@@ -1,5 +1,11 @@
 2009-09-23  Mike Kestner  <mkestner@novell.com>
 
+	* glib/Value.cs: support long and ulong gtypes. still can't construct
+	generically, but can cast to long/ulong and access via Val prop.
+	[Fixes #539812]
+
+2009-09-23  Mike Kestner  <mkestner@novell.com>
+
 	* generator/ReturnValue.cs: support metadata override of default return
 	values.  Based on a patch from Sebastian Dröge. [Fixes #541299]
 
